# one-agent-sdk-python

./: README.md  pyproject.toml
src/one_agent_sdk/: __init__.py  _errors.py  adapt_stream.py  client.py  mcp_server.py  query.py  registry.py  runner.py  session.py  types.py  types_core.py
src/one_agent_sdk/_internal/: client.py  delegates.py  message_parser.py  query.py  sessions.py
src/one_agent_sdk/_internal/transport/: __init__.py  subprocess_cli.py
src/one_agent_sdk/middleware/: __init__.py  core.py  filter.py  guardrails.py  hooks.py  logging.py  text_collector.py  timing.py  usage_tracker.py
src/one_agent_sdk/providers/: __init__.py  anthropic.py  claude.py  codex.py  copilot.py  kimi.py  openai.py  openrouter.py
src/one_agent_sdk/utils/: __init__.py  extract_json.py  handoff.py  tool_map.py
